Fixed the bug of vimix-dark : "invisible progressbar on headerbar"

--- a/src/gtk-3.0/gtkDark-Laptop.css
+++ b/src/gtk-3.0/gtkDark-Laptop.css
@@ -2389,6 +2389,13 @@ progressbar {
   progressbar progress {
     background-color: #444444; }
 
+headerbar progressbar trough {
+  background-color: rgba(238, 238, 238, 0.3); }
+headerbar progressbar progress {
+  background-color: #EEE; }
+headerbar progressbar:backdrop {
+  opacity: 0.75; }
+
 /*************
  * Level Bar *
  *************/
