--- a/src/gtk-3.0/gtkLight.css
+++ b/src/gtk-3.0/gtkLight.css
@@ -2389,6 +2389,13 @@ progressbar {
   progressbar progress {
     background-color: #444444; }
 
+headerbar progressbar trough {
+  background-color: rgba(68, 68, 68, 0.3); }
+headerbar progressbar progress {
+  background-color: #444444; }
+headerbar progressbar:backdrop {
+  opacity: 0.75; }
+
 /*************
  * Level Bar *
  *************/
